# mygtkapp

./: COPYING  meson.build  org.gnome.Example.json
.github/workflows/: main.yml
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  window.ui  window.vala
